--- a/src/AppBundle/Resources/config/validation.yml
+++ b/src/AppBundle/Resources/config/validation.yml
@@ -2,3 +2,6 @@ AppBundle\Entity\User:
     properties:
         name:
             - NotBlank: ~
+        age:
+            - NotBlank: ~
+            - GreaterThan: 18
