Add second field with non-default validation group.

--- a/src/AppBundle/Resources/config/validation.yml
+++ b/src/AppBundle/Resources/config/validation.yml
@@ -2,3 +2,5 @@ AppBundle\Entity\Category:
     properties:
         name:
             - NotBlank: ~
+        modifier:
+            - NotBlank: { groups: [modify] }
