--- a/src/AppBundle/Resources/config/validation.yml
+++ b/src/AppBundle/Resources/config/validation.yml
@@ -11,8 +11,7 @@ AppBundle\Entity\Category:
                         - Optional: ~
                     title:
                         - Optional:
-                            - NotBlank:
+                            - Length:
+                                min: 3
+                                max: 25
                                 groups: [ info ]
-                    text:
-                        - Optional:
-                            - NotBlank: ~
