Highlight the problem.

--- a/src/AppBundle/Resources/config/validation.yml
+++ b/src/AppBundle/Resources/config/validation.yml
@@ -15,3 +15,8 @@ AppBundle\Entity\Category:
                                 min: 3
                                 max: 25
                                 groups: [ info ]
+                    text:
+                        - Optional:
+                            - Length:
+                                min: 3
+                                max: 25
